Fixing some tests by replacing wiremock urls in test files while reading in FileReader with the actual wiremock base url